--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,8 @@
 language: python
-python:
-  - "3.5"
-env:
-  - DJANGO=1.11.16
-install:
-  - pip install -q Django==$DJANGO
-  - pip install coveralls
-script:
-  - python manage.py test ilmo_app
-script:
-  - coverage run --source=your_app manage.py test ilmo_app
-after_success:
-  - coveralls
+python: "3.6"
+install: pip install -r requirements.txt
+install: pip install coveralls
+script: ./scripts/create_test_env.sh
+script: ./scripts/run_tests.sh --teardown
+script: coverage run --source=your_app manage.py test ilmo_app
+after_success: coveralls
