--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-certifi==2018.8.24
 dj-database-url==0.5.0
-Django<=2
+Django<2,>=1.8
 django-classy-tags==0.8.0
 django-cms==3.5.2
 django-filer==1.3.2
@@ -28,3 +27,4 @@ pytz==2018.7
 six==1.11.0
 tzlocal==1.5.1
 Unidecode==0.4.21
+sqlparse
