--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
+asgiref==3.5.0
+backports.zoneinfo==0.2.1
+cssselect2==0.5.0
 dj-database-url==0.5.0
-Django<2,>=1.8
+Django==4.0.3
 django-classy-tags==0.8.0
-django-cms==3.5.2
-django-filer==1.3.2
+django-cms==3.9.0
+django-filer==2.1.2
 django-formtools==2.1
 django-mptt==0.8.7
 django-polymorphic==2.0.3
 django-sekizai==0.10.0
 django-treebeard==4.3
 djangocms-admin-style==1.2.9
-djangocms-attributes-field==0.4.0
-djangocms-column==1.9.0
+djangocms-attributes-field==2.0.0
+djangocms-column==1.11.0
 djangocms-file==2.0.3
 djangocms-googlemap==1.2.0
 djangocms-installer==1.0.1
@@ -18,13 +21,18 @@ djangocms-link==2.1.2
 djangocms-picture==2.0.7
 djangocms-snippet==2.0.0
 djangocms-style==2.1.0
-djangocms-text-ckeditor==3.3.1
+djangocms-text-ckeditor==5.0.1
 djangocms-video==2.0.5
-easy-thumbnails==2.5
-html5lib==0.9999999
+easy-thumbnails==2.8.1
+html5lib==1.1
+lxml==4.8.0
 Pillow==5.3.0
 pytz==2018.7
+reportlab==3.6.8
 six==1.11.0
+sqlparse==0.4.2
+svglib==1.2.1
+tinycss2==1.1.1
 tzlocal==1.5.1
 Unidecode==0.4.21
-sqlparse
+webencodings==0.5.1
